--- a/valuation.html
+++ b/valuation.html
@@ -17,11 +17,11 @@ layout: valuation
       <div class="card bg-light mb-3">
         <div class="card-header">Valuation</div>
         <div class="card-body">
-          <h5 class="card-title valPrice">£170,000</h5>
+          <h5 class="card-title valPrice" id="valPriceLow"></h5>
           <p class="card-text">Low Estimate</p>
-          <h5 class="card-title valPrice">£185,000</h5>
+          <h5 class="card-title valPrice" id="valPriceMed"></h5>
           <p class="card-text">Med Estimate</p>
-          <h5 class="card-title valPrice">£200,000</h5>
+          <h5 class="card-title valPrice" id="valPriceHigh"></h5>
           <p class="card-text">High Estimate</p>
         </div>
       </div>
