pre-live changes

--- a/valuation.html
+++ b/valuation.html
@@ -25,11 +25,9 @@ layout: valuation
           <p class="card-text">High Estimate</p>
         </div>
       </div>
-    </div>
-    <div class="col-3">
       <div class="card text-white bg-dark mb-3">
         <div class="card-header">
-            Address
+          Address
         </div>
         <div class="card-body" id="addressCard">
           <div class="card-text">
@@ -42,8 +40,28 @@ layout: valuation
         </div>
       </div>
     </div>
-    <div class="col-6">
-      <canvas id="valueTimeChart"></canvas>
+    <div class="col-4">
+      <section id="nextSteps">
+        <div class="panel">
+          <ul class="list-group list-group-flush">
+            <li class="list-group list-group-flush"><h4>Next Steps...</h4></li>
+            <li class="list-group-item">Nothing beats a face to face valuation report from an Estate Agent. They will take into account; changes made to your property, Extensions and curb appeal.</li>
+            <li class="list-group-item">Estate agents don’t charge for face to face valuations, this is their opportunity to showcase how best they can sell your home. We recommend meeting at least 2 agents to compare fee’s and their local success rate.</li>
+          </ul>
+        </div>
+      </section>
     </div>
+    <div class="col">
+      <section id="purpleBricks">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+      </section>
   </div>
 </div>
