--- a/valuation.html
+++ b/valuation.html
@@ -13,7 +13,9 @@ layout: valuation
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-12 col-md-3">
+      <div class="row">
+        <div class="col-12">
       <div class="card bg-light mb-3">
         <div class="card-header">Valuation</div>
         <div class="card-body">
@@ -25,6 +27,8 @@ layout: valuation
           <p class="card-text">High Estimate</p>
         </div>
       </div>
+      </div>
+      <div class="col-12">
       <div class="card text-white bg-dark mb-3">
         <div class="card-header">
           Address
@@ -39,8 +43,12 @@ layout: valuation
           </div>
         </div>
       </div>
+      </div>
     </div>
-    <div class="col-4">
+    </div>
+    <div class="col-12 col-md-9">
+      <div class="row">
+        <div class="col-12">
       <section id="nextSteps">
         <div class="panel">
           <ul class="list-group list-group-flush">
@@ -50,18 +58,32 @@ layout: valuation
           </ul>
         </div>
       </section>
-    </div>
-    <div class="col">
-      <section id="purpleBricks">
+      </div>
+    <div class="col-12 col-md-4 mt-3">
+      <section class="onlineAgent">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <h5 class="card-title">Our Recommendation</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Purple Bricks</h6>
+
+            <p class="card-text">
+              <ul>
+                <li>Online estate agent</li>
+                <li>Fixed Agent Fee: <small>from</small> £899</li>
+                <li>Local property expert</li>
+                <li>Availble 7 days a week</li>
+              </ul>
+            </p>
+            <a href="https://www.purplebricks.co.uk/book-your-free-valuation/find-your-address" class="btn btn-primary btn-purpleBricks" target="_blank">Book now</a>
           </div>
         </div>
       </section>
+      </div>
+      <div class="col-12 col-md-8">
+      <div id="estateAgentsMap"></div>
+      </div>
   </div>
+</div>
+</div>
+</div>
 </div>
