--- a/dashboard.html
+++ b/dashboard.html
@@ -11,8 +11,27 @@ layout: valuation
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-9 px-4">
 
-            
+
 
         </main>
+        <div class="mobileMenuVal d-sm-none">
+          <div class="menuBody animated slideInRight fast">
+            <ul class="nav md-tabs flex-column">
+              <li class="nav-item z-depth-2">
+                <a class="nav-link active" data-name="valuation" href="#"><i class="fas fa-pound-sign"></i></a>
+              </li>
+              <li class="nav-item z-depth-2">
+                <a class="nav-link" href="#" data-name="estate-agent" id="findEAgent"><i class="fas fa-search"></i></a>
+              </li>
+              <li class="nav-item z-depth-2">
+                <a class="nav-link" href="#" data-name="calculators"><i class="fas fa-calculator"></i></a>
+              </li>
+              <li class="nav-item z-depth-2">
+                <a class="nav-link" href="#" data-name="checklist"><i class="fas fa-pencil-alt"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="menuFab d-md-none"><a class="btn-floating z-depth-1"><i class="fas fa-ellipsis-h"></i></a></div>
       </div>
     </div>
