New Stamp Duty calculator

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,15 +18,19 @@ layout: valuation
           <div class="menuBody animated slideInRight fast">
             <ul class="nav md-tabs flex-column">
               <li class="nav-item z-depth-2">
+                <span class="mobMenuLabel">Valuation</span>
                 <a class="nav-link active" data-name="valuation" href="#"><i class="fas fa-pound-sign"></i></a>
               </li>
               <li class="nav-item z-depth-2">
+                <span class="mobMenuLabel" style="width: 160px;">Find Estate Agents</span>
                 <a class="nav-link" href="#" data-name="estate-agent" id="findEAgent"><i class="fas fa-search"></i></a>
               </li>
               <li class="nav-item z-depth-2">
+                <span class="mobMenuLabel">Calculators</span>
                 <a class="nav-link" href="#" data-name="calculators"><i class="fas fa-calculator"></i></a>
               </li>
               <li class="nav-item z-depth-2">
+                <span class="mobMenuLabel">Checklist</span>
                 <a class="nav-link" href="#" data-name="checklist"><i class="fas fa-pencil-alt"></i></a>
               </li>
             </ul>
