new area explorer new area explorer

--- a/dashboard.html
+++ b/dashboard.html
@@ -30,9 +30,13 @@ layout: valuation
                 <a class="nav-link" href="#" data-name="calculators"><i class="fas fa-calculator"></i></a>
               </li>
               <li class="nav-item z-depth-2">
+                <span class="mobMenuLabel">Explore Area</span>
+                <a class="nav-link" href="#" data-name="area"><i class="far fa-map"></i></a>
+              </li>
+              <!-- <li class="nav-item z-depth-2">
                 <span class="mobMenuLabel">Checklist</span>
                 <a class="nav-link" href="#" data-name="checklist"><i class="fas fa-pencil-alt"></i></a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
