Ch ch ch changes

--- a/news-insights.html
+++ b/news-insights.html
@@ -2,7 +2,7 @@
 title: New & Insights
 permalink: "/news-insights"
 layout: page
-heroImg: "/img/news-insights.jpeg"
+heroImg: "img/new-insights.jpeg"
 ---
 
 {% include navbar.html %}
