--- a/valuation-form.html
+++ b/valuation-form.html
@@ -1,8 +1,9 @@
 ---
-title: Valuation
+title: Start Your Report
 permalink: "/valuation-form"
 layout: page
-heroImg: "/img/news-insights.jpeg"
+heroImg: "/img/form-header.jpg"
+heading: "Build your free personalised property report"
 ---
 
 {% include navbar.html %}
