--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 title: About
 permalink: "/about"
 layout: page
-heroImg: "/img/news-insights.jpeg"
+heroImg: "img/new-insights.jpeg"
 
 ---
 {% include navbar.html %}
