--- a/policies.html
+++ b/policies.html
@@ -2,6 +2,7 @@
 title: Terms & Cookies Policy
 permalink: "/policies"
 layout: page
+heroImg: "img/new-insights.jpeg"
 ---
 
 {% include navbar.html %}
