--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@ title: contact
 permalink: "/contact"
 layout: page
 heroImg: "img/new-insights.jpeg"
+image: img/mpiLogo.png
 ---
 
 {% include navbar.html %}
