--- a/news-insights.html
+++ b/news-insights.html
@@ -3,6 +3,7 @@ title: New & Insights
 permalink: "/news-insights"
 layout: page
 heroImg: "img/new-insights.jpeg"
+image: img/mpiLogo.png
 ---
 
 {% include navbar.html %}
