--- a/policies.html
+++ b/policies.html
@@ -3,6 +3,7 @@ title: Terms & Cookies Policy
 permalink: "/policies"
 layout: page
 heroImg: "img/new-insights.jpeg"
+image: img/mpiLogo.png
 ---
 
 {% include navbar.html %}
