--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,7 @@ title: Terms of Use
 permalink: "/terms-of-use"
 layout: page
 heroImg: "img/new-insights.jpeg"
+image: img/mpiLogo.png
 ---
 
 {% include navbar.html %}
