--- a/valuation-form.html
+++ b/valuation-form.html
@@ -4,6 +4,7 @@ permalink: "/valuation-form"
 layout: page
 heroImg: "/img/form-header.jpg"
 heading: "Build your free personalised property report"
+image: img/mpiLogo.png
 ---
 
 {% include navbar.html %}
